<resources>
    <string name="app_name">TimeTableManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_notification">Show Notification</string>
    <string name="reset_database">Reset Database</string>
    <string name="clear_all_data_related_to_your_timetable">Clear all data related to your timetable</string>
    <string name="set_project_notification_time">Set project notification time</string>
    <string name="you_will_receive_notification_at_12_30">You will receive notification at 12:30</string>
    <string name="developer">Developer</string>
    <string name="nwevo_peace_chinedu">Nwevo Peace Chinedu</string>
    <string name="designer">Designer</string>
    <string name="_8_00am_9_00am">8:00AM - 9:00AM</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="csc_226">CSC 226</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add_button">add button</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="code">Code</string>
    <string name="title">Title</string>
    <string name="select_day">Select Day</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="email">Email</string>
    <string name="reg_no">Reg. No</string>
    <string name="fill_in_the_required_fields_to_get_registered_to_the_application">Fill in the required fields to get registered to the application</string>
    <string name="add_schedules">Add Schedules</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_reg">Enter Valid Reg Number</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Reg Number Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Reg Number or Password</string>

    <string-array name="days">

        <!--        <item>Select Day...</item>-->
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </string-array>

</resources>