<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/welcome_back"
        android:textColor="@color/cyan_800"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="@id/welcome"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_no_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reg_no"
        app:errorEnabled="true"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/sign"
        app:layout_constraintEnd_toEndOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/welcome"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@id/reg_no_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/cyan_800"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@id/forgot" />

    <TextView
        android:id="@+id/new_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:gravity=""
        android:text="@string/new_user"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/sign_up"
        android:textColor="@color/cyan_800"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/new_text"
        app:layout_constraintStart_toEndOf="@id/new_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>