<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/not_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:text="@string/show_notification"
        android:textColor="@color/cyan_800"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_db"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset_database"
        android:textColor="@color/cyan_800"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/not_switch"
        app:layout_constraintStart_toStartOf="@+id/not_switch"
        app:layout_constraintTop_toBottomOf="@id/not_switch" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_all_data_related_to_your_timetable"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/not_switch"
        app:layout_constraintStart_toStartOf="@+id/not_switch"
        app:layout_constraintTop_toBottomOf="@id/reset_db" />

    <TextView
        android:id="@+id/set_pro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/set_project_notification_time"
        android:textColor="@color/cyan_800"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/not_switch"
        app:layout_constraintStart_toStartOf="@+id/not_switch"
        app:layout_constraintTop_toBottomOf="@id/clear" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/you_will_receive_notification_at_12_30"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/not_switch"
        app:layout_constraintStart_toStartOf="@+id/not_switch"
        app:layout_constraintTop_toBottomOf="@id/set_pro" />

</androidx.constraintlayout.widget.ConstraintLayout>