<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Update Schedule"
        android:textColor="@color/cyan_800"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/course_title_layout"
        app:layout_constraintStart_toStartOf="@id/course_title_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_day_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <AutoCompleteTextView
            android:id="@+id/select_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_code_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/code"
        app:layout_constraintEnd_toEndOf="@id/select_day_layout"
        app:layout_constraintStart_toStartOf="@id/select_day_layout"
        app:layout_constraintTop_toBottomOf="@id/select_day_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_title_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="@id/course_code_layout"
        app:layout_constraintStart_toStartOf="@id/course_code_layout"
        app:layout_constraintTop_toBottomOf="@id/course_code_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/time_drawable"
        android:drawableStart="@drawable/alarm"
        android:drawablePadding="8dp"
        android:drawableTint="#999"
        android:gravity="center|start"
        android:hint="@string/start_time"
        android:paddingStart="14dp"
        android:paddingTop="16dp"
        android:paddingEnd="14dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toStartOf="@id/end_time_text"
        app:layout_constraintStart_toStartOf="@id/course_title_layout"
        app:layout_constraintTop_toBottomOf="@id/course_title_layout" />

    <TextView
        android:id="@+id/end_time_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/time_drawable"
        android:drawableStart="@drawable/alarm"
        android:drawablePadding="8dp"
        android:drawableTint="#999"
        android:gravity="center|start"
        android:hint="@string/end_time"
        android:paddingStart="14dp"
        android:paddingTop="16dp"
        android:paddingEnd="14dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="@id/course_title_layout"
        app:layout_constraintStart_toEndOf="@id/start_time_text"
        app:layout_constraintTop_toTopOf="@id/start_time_text" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="@id/course_title_layout"
        app:layout_constraintStart_toStartOf="@id/course_title_layout"
        app:layout_constraintTop_toBottomOf="@id/start_time_text" />

</androidx.constraintlayout.widget.ConstraintLayout>